--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,17 @@
       "guzzlehttp/guzzle": "~6.0",
       "php": "^7.1.3"
     },
-    "require-dev": {},
+    "require-dev": {
+      "phpunit/phpunit": "^7"
+    },
     "autoload" : {
       "psr-4" : {
         "HidalgoRides\\SlackNotifier\\" : "src/"
+      }
+    },
+    "autoload-dev" : {
+      "psr-4" : {
+        "Tests\\" : "tests/"
       }
     },
     "config": {
@@ -27,4 +34,3 @@
     "minimum-stability": "dev",
     "prefer-stable": true
   }
-  
