--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
       "php": "^7.1.3"
     },
     "require-dev": {
-      "phpunit/phpunit": "^7"
+        "mockery/mockery": "^1.2",
+        "phpunit/phpunit": "^7"
     },
     "autoload" : {
       "psr-4" : {
